# PhotonRenderer

./: .gitmodules  CMakeLists.txt  README.md
samples/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
samples/GLTFViewer/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/Core/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Entity.cpp  Entity.h  FogVolume.cpp  FogVolume.h  Light.cpp  Light.h  LightProbe.cpp  LightProbe.h  Lod.cpp  Lod.h  ParticleSystem.cpp  ParticleSystem.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  Volume.cpp  Volume.h
src/GL/: GLBuffer.h  GLFramebuffer.h  GLProgram.cpp  GLProgram.h  GLShader.h  GLTexture.h  GLVertexArray.h
src/GPU/: Buffer.h  CommandBuffer.h  Context.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  Enums.h  Framebuffer.h  Image.h  ImageView.h  Pipeline.h  Sampler.h  Swapchain.h
src/GPU/DX11/: DX11Buffer.cpp  DX11Buffer.h  DX11CommandBuffer.cpp  DX11CommandBuffer.h  DX11Context.cpp  DX11Context.h  DX11Descriptor.cpp  DX11Descriptor.h  DX11DescriptorPool.cpp  DX11DescriptorPool.h  DX11DescriptorSet.cpp  DX11DescriptorSet.h  DX11Device.cpp  DX11Device.h  DX11Enums.cpp  DX11Enums.h  DX11Framebuffer.cpp  DX11Framebuffer.h  DX11Image.cpp  DX11Image.h  DX11ImageView.cpp  DX11ImageView.h  DX11Pipeline.cpp  DX11Pipeline.h  DX11Platform.h  DX11Sampler.cpp  DX11Sampler.h  DX11Swapchain.cpp  DX11Swapchain.h
src/GPU/GL/: GLBuffer.cpp  GLBuffer.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLContext.cpp  GLContext.h  GLDescriptor.cpp  GLDescriptor.h  GLDescriptorPool.cpp  GLDescriptorPool.h  GLDescriptorSet.cpp  GLDescriptorSet.h  GLEnums.cpp  GLEnums.h  GLFramebuffer.cpp  GLFramebuffer.h  GLImage.cpp  GLImage.h  GLImageView.cpp  GLImageView.h  GLPipeline.cpp  GLPipeline.h  GLPlatform.h  GLProgram.cpp  GLProgram.h  GLSampler.cpp  GLSampler.h  GLShader.h  GLSwapchain.cpp  GLSwapchain.h
src/GPU/VK/: VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKContext.cpp  VKContext.h  VKDescriptor.cpp  VKDescriptor.h  VKDescriptorPool.cpp  VKDescriptorPool.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDevice.cpp  VKDevice.h  VKEnums.cpp  VKEnums.h  VKFramebuffer.cpp  VKFramebuffer.h  VKImage.cpp  VKImage.h  VKImageView.cpp  VKImageView.h  VKPipeline.cpp  VKPipeline.h  VKPlatform.h  VKSampler.cpp  VKSampler.h  VKSwapchain.cpp  VKSwapchain.h
src/Graphics/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  FPSCamera.cpp  FPSCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Frustrum.cpp  Frustrum.h  GUI.cpp  GUI.h  Geometry.cpp  Geometry.h  GraphicsContext.cpp  GraphicsContext.h  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  MorphAnimation.cpp  MorphAnimation.h  NodeAnimation.cpp  NodeAnimation.h  OrbitCamera.cpp  OrbitCamera.h  Outline.cpp  Outline.h  PostProcessor.cpp  PostProcessor.h  Primitive.cpp  (+21 more)
src/IO/: AssetManager.cpp  AssetManager.h  AssimpImporter.cpp  AssimpImporter.h  FileIO.cpp  FileIO.h  GLTFImporter.cpp  GLTFImporter.h  IESProfileImporter.cpp  IESProfileImporter.h  Image.h  ImageLoader.cpp  ImageLoader.h  ModelImporter.cpp  ModelImporter.h  ModelLoader.cpp  ModelLoader.h  SceneExporter.cpp  SceneExporter.h  SceneLoader.cpp  SceneLoader.h  ShaderLoader.cpp  ShaderLoader.h  TangentSpace.cpp  TangentSpace.h  UnityTestImporter.cpp  UnityTestImporter.h
src/IO/Image/: Cubemap.h  Image.h  ImageDecoder.cpp  ImageDecoder.h
src/IO/Unity/: LightData.cpp  LightData.h  UnityImporter.cpp  UnityImporter.h  UnityMaterials.cpp  UnityMaterials.h  UnityTypes.h  UnityYAML.cpp  UnityYAML.h
src/IO/glTF/: BinaryData.cpp  BinaryData.h  GLTFAnimation.cpp  GLTFAnimation.h  GLTFMaterial.cpp  GLTFMaterial.h  GLTFMesh.cpp  GLTFMesh.h  TextureData.cpp  TextureData.h
src/IO/legacy/: Cubemap.h  HDRSphere.cpp  HDRSphere.h  Image.h
src/Math/: AABBTree.cpp  AABBTree.h  Frustrum.cpp  Frustrum.h  Geometry.cpp  Geometry.h  Intersection.h  Shapes.cpp  Shapes.h
src/Physics/: Intersection.h
src/Platform/: EventHandler.cpp  EventHandler.h  GLWindow.cpp  GLWindow.h  InputHandler.cpp  InputHandler.h  Types.h  Window.cpp  Window.h
src/Platform/Win32/: Win32EventHandler.cpp  Win32EventHandler.h  Win32Window.cpp  Win32Window.h
src/Shaders/: BRDF.glsl  Camera.glsl  Default.frag  Default.vert  DefaultCubemap.frag  DefaultCubemap.geom  DefaultCubemap.vert  DefaultNew.frag  DefaultNew.vert  Depth.frag  Depth.vert  DepthCSM.frag  DepthCSM.geom  DepthCSM.vert  DepthCubemap.frag  DepthCubemap.geom  DepthCubemap.vert  Differential.frag  DoF.frag  DoF.glsl  DoF.vert  DownSample.frag  GaussianBlur.frag  HDR.glsl  IBL.glsl  IBLDiffuseIrradiance.frag  IBLDiffuseIrradiance.geom  IBLFilter.frag  IBLFilter.geom  IBLIntegrateBRDF.frag  IBLIntegrateBRDF.vert  IBLSpecular.frag  IBLSpecular.vert  Light.glsl  LightCulling.comp  Material.glsl  MorphTargets.vert  Outline.frag  PanoToCubeMap.frag  PanoToCubeMap.geom  (+27 more)
src/Shaders/GLSL/: Animation.glsl  BRDF.glsl  Camera.glsl  DefaultGeneric.frag  DefaultGeneric.vert  DefaultScatter.frag  DefaultTranslucency.frag  Light.glsl  Model.glsl  Outline.frag  Simple.frag  Simple.vert  Skybox.frag  Skybox.vert  Unlit.frag  Unlit.vert  Utils.glsl
src/Shaders/GLSL/IBL/: IBL.glsl  IBLFilter.frag  IBLFilter.geom  IBLFilter.vert  IBLIntegrateBRDF.frag  (+4 more)
src/Shaders/HLSL/: DefaultGeneric.ps.hlsl  DefaultScatter.ps.hlsl  GUI.ps.hlsl  GUI.vs.hlsl  Outline.ps.hlsl  PostProcess.ps.hlsl  PostProcess.vs.hlsl  Skybox.ps.hlsl  Skybox.vs.hlsl  Unlit.ps.hlsl  Unlit.vs.hlsl
src/Shaders/Materials/: Default.glsl  DefaultMaterial.glsl  Glass.glsl  HeightBlend3.glsl  Rain.glsl  RainPOM.glsl  RainRefraction.glsl  SpecGloss.glsl  TerrainBlend.glsl  Velvet.glsl
src/Shaders/Scripts/: BuildVariants.ipynb  CompileToSPV.ps1  ConvertCGToGLSL.ipynb  ConvertShadergraphToGLSL.ipynb  ConvertShadergraphToHLSL.ipynb
src/Utils/: Color.cpp  Color.h  IBL.cpp  IBL.h  Types.h
(+104 files in other folders)
